# woodworking-blog

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  database.py  template_filters.py  util.py
app/blueprints/: __init__.py
app/blueprints/auth/: __init__.py  forms.py  urls.py  views.py
app/blueprints/blog/: __init__.py  cli.py  forms.py  urls.py  views.py
app/blueprints/core/: __init__.py  urls.py  views.py
app/cli/: __init__.py
app/exts/: __init__.py  login.py
app/services/: post.py
app/static/js/: ace-setup.js
app/templates/: base.html  edit_post.html  home.html  navbar.html  new_post.html
app/templates/blog/: edit_post.html  new_post.html  post.html  posts.html
db/: schema.sql
db/migrations/: 20230520175922_initial.sql
