[tool.poetry]
name = "woodworking-blog"
version = "0.1.0"
description = ""
authors = ["Derek Morey <derek.o.morey@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flask-login = "^0.6.2"
python-dotenv = "^1.0.0"
flask-wtf = "^1.1.1"
python-slugify = "^8.0.1"
markdown = "^3.4.3"
pygments = "^2.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
